--- a/Projeto_JS/src/css/restaurant.css
+++ b/Projeto_JS/src/css/restaurant.css
@@ -1,28 +1,81 @@
+    
+
+:root {
+    --bg-color:#f39779;
+    
+   
+}
 body {
-    background-color: darksalmon;
+    background: var(--bg-color);  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    box-sizing: border-box;
+    margin: 0 auto;
+    font-family: "Roboto", serif;
+    font-weight: 900;
+    font-style: normal;
     
 }
+.header {
+    display: flex;
+    justify-content: center;
+    font-size: 3.1rem;
+    font-family: "Protest Revolution", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    height: 50px;
+    
+      
+}
 .container {
-    border: 10px solid black;
-    display: grid;
-    grid-template-areas: "header1 header1"
-                        "img img"
-                        "promo promo";
-    margin: 0 auto;
-    max-width: 1200px;
-}
-.header1 {
-    margin: 0 auto;
-}
-.promo {
-    grid-area: content;
-    width: 100%;
-    margin: 0 auto;
-}
-.img {
-    grid-area: img;
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    
 
 }
+.content {
+    font-size: 1.8rem;
+}
+input[type="text"]{
+    border-radius: 15px;
+    font-size: 1.5rem;
+}
+.container>img {
+    width: 450px;
+    -webkit-box-shadow: 10px 13px 12px -3px rgba(0,0,0,0.69);
+    -moz-box-shadow: 10px 13px 12px -3px rgba(0,0,0,0.69);
+    box-shadow: 10px 13px 12px -3px rgba(0,0,0,0.69);
+    border-radius: 30px 0 30px 0;
+}
+.button-3D {
+    background-image: linear-gradient(to right, #FF512F 0%, #F09819  51%, #FF512F  100%)}
+.button-3D {
+   margin: 10px;
+   padding: 15px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: rgb(130, 1, 1); 
+   font-weight: 600;      
+   font-size: 1rem;     
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+   display: block;
+ }
+
+ .button-3D:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #090909;
+   text-decoration: none;
+ }
+ .content>a {
+    font-size: 0.9rem;
+    color: #090909;
+    border: 1px solid #090909;
+    padding: 5px;
+    border-radius: 30px;
+ }
+
+ 
