--- a/Projeto_JS/src/css/index.css
+++ b/Projeto_JS/src/css/index.css
@@ -188,6 +188,20 @@ box-shadow:  -8px -8px 10px #549338,
   }
  
 }
+::-webkit-scrollbar {
+  width: 20px;
 
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background: rgb(59, 180, 228);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #8a048a;
+}
 
 
